Moved images to Doodle Jump folder and started work on tile puzzle solver html

--- a/Game Builds/JavaScript Game Projects/DoodleJump/DoodleJump.css
+++ b/Game Builds/JavaScript Game Projects/DoodleJump/DoodleJump.css
@@ -4,5 +4,5 @@ body
 }
 
 #board{
-    background-image: url("D:/Git Repositories/IMPORTANT-Projects/Game Builds/JavaScript Game Projects/doodlejumpbg.png");
+    background-image: url("D:/Git Repositories/IMPORTANT-Projects/Game Builds/JavaScript Game Projects/DoodleJump/Assets/doodlejumpbg.png");
 }
